--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 	      <h1 class="intro-title1">Hi, i'm <span class="color1 bold">AR Tegui-ing</span></h1>
 	      <!-- /Welcome Title -->
 	      <!-- Job - -->
-	      <h2 class="intro-title2">Fullstack Developer Developer</h2>
+	      <h2 class="intro-title2">Fullstack Developer</h2>
 	      <!-- /job -->
 	      <!-- Description -->
              <p>Over the last 8 years, I have developed data-driven applications mostly for web using advanced backend with PHP/MySQL and rich frontend HTML/CSS/JavaScript.</p> 
