--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 
 	<!-- Other Buttons -->
 	<div class="side-menu-buttons">
-	<a target="_blank" href="assets/img/amor-resume.pdf" class="btn btn-side-menu"><i class="fa fa-download"></i> Download my resume</a>
-	<a href="mailto:teguing.amr@gmail.com.com" class="btn btn-side-menu"><i class="fa fa-envelope-o"></i> Send me a message</a>
+	<a target="_blank" href="assets/img/Amor_resume.pdf" class="btn btn-side-menu"><i class="fa fa-download"></i> Download my resume</a>
+	<a href="mailto:teguing.amr@gmail.com" class="btn btn-side-menu"><i class="fa fa-envelope-o"></i> Send me a message</a>
 	</div>
 	<!-- /Other Buttons-->
 	</div>
@@ -158,7 +158,7 @@
 	  <div class="row">
 	    <div class="header-buttons col-md-10 col-md-offset-1">
 	      <!-- Download Resume Button -->
-	      <a target="_blank" href="assets/img/amor-resume.pdf" class="btn btn-default btn-top-resume"><i class="fa fa-download"></i><span class="btn-hide-text">Download my resume</span></a>
+	      <a target="_blank" href="assets/img/amor_resume.pdf" class="btn btn-default btn-top-resume"><i class="fa fa-download"></i><span class="btn-hide-text">Download my resume</span></a>
 	      <!-- /Download Resume Button -->
 	      <!-- Mail Button -->
 	      <a href="mailto:teguing.amr@gmail.com" class="btn btn-default btn-top-message"><i class="fa fa-envelope-o"></i><span class="btn-hide-text">Send me a message</span></a>
