--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@
 							</div>
 							<!-- content -->
 							<div class="job-description">
-								<p> <a target="_blank" href="http://general.eastbayprep.com/">general.eastbayprep.com/</a> Learning Management System. </p>
+								<p> <a target="_blank" href="https://eastbayprep.com/"</a> Learning Management System. </p>
 								<p><strong>About the site:</strong> </p>
 								<p>ACT and SAT Test Prep, Subject Tutoring, One on One and Small Group Classes, Remote Tutoring Services, </p>
 								<p><i class="fa fa-tag"></i>PHP</p>
