--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@
 						<div class="clearfix"></div>
 						<div class="line-content line-content-portfolio">
 							<!-- Work Place -->
-							<h3 class="section-item-title-1">https://meethugo.com/</h3>
+							<h3 class="section-item-title-1">Meethugo/</h3>
 							<!-- /work place -->
 							<div class="col-md-6">
 								<div class="row">
@@ -970,7 +970,7 @@
 							</div>
 							<!-- content -->
 							<div class="job-description">
-								<p> <a target="_blank" href="https://eastbayprep.com/"</a> Lead Generation Software. </p>
+								<p> <a target="_blank" href="https://meethugo.com/"</a> Lead Generation Software. </p>
 								<p><strong>About the site:</strong> </p>
 								<p>A sales platform that allows you to grow your sales pipeline, build new relationships, and make more sales. </p>
 								<p><i class="fa fa-tag"></i>PHP</p>
