--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@
 						<div class="clearfix"></div>
 						<div class="line-content line-content-portfolio">
 							<!-- Work Place -->
-							<h3 class="section-item-title-1">Meethugo/</h3>
+							<h3 class="section-item-title-1">Meethugo</h3>
 							<!-- /work place -->
 							<div class="col-md-6">
 								<div class="row">
