--- a/index.html
+++ b/index.html
@@ -964,7 +964,7 @@
 							<div class="col-md-6">
 								<div class="row">
 									<!-- Graduation time -->
-									<a class="nivobox" href="assets/projects/ohvola.png"><img src="assets/projects/meethugo.png" alt="" class="img-thumbnail" width="300"></a>
+									<a class="nivobox" href="assets/projects/meethugo.png"><img src="assets/projects/meethugo.png" alt="" class="img-thumbnail" width="300"></a>
 									<!-- /Graduation time -->									
 								</div>
 							</div>
@@ -986,7 +986,7 @@
 							<div class="col-md-6">
 								<div class="row">
 									<!-- Graduation time -->
-									<a class="nivobox" href="assets/projects/ohvola.png"><img src="assets/projects/eastbay.png" alt="" class="img-thumbnail" width="300"></a>
+									<a class="nivobox" href="assets/projects/eastbay.png"><img src="assets/projects/eastbay.png" alt="" class="img-thumbnail" width="300"></a>
 									<!-- /Graduation time -->									
 								</div>
 							</div>
@@ -1007,7 +1007,7 @@
 							<div class="col-md-6">
 								<div class="row">
 									<!-- Graduation time -->
-									<a href="assets/projects/tpl.png" class="nivobox"><img src="assets/projects/funnelbolt.png" alt="" class="img-thumbnail" width="300"></a>
+									<a href="assets/projects/funnelbolt.png" class="nivobox"><img src="assets/projects/funnelbolt.png" alt="" class="img-thumbnail" width="300"></a>
 									<!-- /Graduation time -->									
 								</div>
 							</div>
