--- a/index.html
+++ b/index.html
@@ -55,16 +55,7 @@
 		========================================================= -->
 		<!-- jQuery (necessary for plugins) -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>		
-		<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-		  ga('create', 'UA-9325492-17', 'auto');
-		  ga('send', 'pageview');
-
-		</script>
+		
 	</head>
 
 	<body data-spy="scroll" data-target="#side-menu">
@@ -126,7 +117,7 @@
 
 	<!-- Other Buttons -->
 	<div class="side-menu-buttons">
-	<a target="_blank" href="assets/img/Amor_Resume.pdf" class="btn btn-side-menu"><i class="fa fa-download"></i> Download my resume</a>
+	<a target="_blank" href="https://docs.google.com/document/d/1DOuHsBQbcFo_z21dE4xJ5U-LbEZ_TR4v/edit?usp=sharing&ouid=114848378025587470395&rtpof=true&sd=true" class="btn btn-side-menu"><i class="fa fa-download"></i> Download my resume</a>
 	<a href="mailto:teguing.amr@gmail.com" class="btn btn-side-menu"><i class="fa fa-envelope-o"></i> Send me a message</a>
 	</div>
 	<!-- /Other Buttons-->
