--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 	  <div class="row">
 	    <div class="header-buttons col-md-10 col-md-offset-1">
 	      <!-- Download Resume Button -->
-	      <a target="_blank" href="assets/img/Amor_Resume.pdf" class="btn btn-default btn-top-resume"><i class="fa fa-download"></i><span class="btn-hide-text">Download my resume</span></a>
+	      <a target="_blank" href="https://docs.google.com/document/d/1DOuHsBQbcFo_z21dE4xJ5U-LbEZ_TR4v/edit?usp=sharing&ouid=114848378025587470395&rtpof=true&sd=true" class="btn btn-default btn-top-resume"><i class="fa fa-download"></i><span class="btn-hide-text">Download my resume</span></a>
 	      <!-- /Download Resume Button -->
 	      <!-- Mail Button -->
 	      <a href="mailto:teguing.amr@gmail.com" class="btn btn-default btn-top-message"><i class="fa fa-envelope-o"></i><span class="btn-hide-text">Send me a message</span></a>
